# services/task-service/src/controllers/api-key.controller.ts
@@ -1,5 +1,5 @@
 // api-key.controller.ts
-import {post, HttpErrors} from '@loopback/rest';
+import {post, HttpErrors, requestBody, getModelSchemaRef} from '@loopback/rest';
 import {injectable, service} from '@loopback/core';
 import {authorize} from 'loopback4-authorization';
 import {STRATEGY, authenticate} from 'loopback4-authentication';
@@ -7,6 +7,8 @@ import {TaskPermssionKey} from '../enums/permission-key.enum';
 import {UtilityService} from '../services/utility.service';
 import {repository} from '@loopback/repository';
 import {ApiKeyRepository} from '../repositories';
+import {ClientAppDTO} from '../models';
+import {CONTENT_TYPE} from '@sourceloop/core';
 
 @injectable()
 export class ApiKeyController {
@@ -20,9 +22,21 @@ export class ApiKeyController {
   @authenticate(STRATEGY.BEARER)
   @authorize({permissions: [TaskPermssionKey.APIAdmin]})
   @post('/api-keys')
-  async generateApiKeys(): Promise<{apiKey: string; apiSecret: string}> {
+  async generateApiKeys(
+    @requestBody({
+      content: {
+        [CONTENT_TYPE.JSON]: {
+          schema: getModelSchemaRef(ClientAppDTO, {
+            title: 'ClientApp',
+          }),
+        },
+      },
+    })
+    clientApp: ClientAppDTO,
+  ): Promise<{apiKey: string; apiSecret: string}> {
     try {
-      const {apiKey, apiSecret} = this.utilityService.generateApiKeyAndSecret();
+      const {apiKey, apiSecret} =
+        this.utilityService.generateApiKeyAndSecret(clientApp);
       await this.apiKeyRepo.create({apiKey, apiSecret});
 
       return {apiKey, apiSecret};
