# services/task-service/src/models/index.ts
@@ -7,3 +7,4 @@ export * from './webhook-subscriptions.model';
 export * from './subscriber-dto.model';
 export * from './task-dto.model';
 export * from './api-key.model';
+export * from './client-app-dto.model';
